fix color contrast issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   --color-lightgold:#e4d59f;
   --color-gold: #ccba78;
   --color-darkgold: #baa448;
-  --color-deepgold:#a48924;
+  --color-deepgold:#806a1e;
    --color-lightgold: #d4caa2;
   --color-navy: #0a223a;
   --color-brown: #361c0c;
